# arras4_node

./: .gitignore  CMakeLists.txt  DWABUILD.md  README.md  commits.txt  package.py
bart_tools/: arras_third_party.py  arras_utils.py  ispc_dso.py  nexus_pull.py
cmake/: ArrasNodeCompileDefinitions.cmake  ArrasNodeCompileFeatures.cmake  ArrasNodeCompileOptions.cmake  ArrasNodeConfig.cmake.in  ArrasNodeLinkOptions.cmake
cmd/: CMakeLists.txt
cmd/coordinator/: SConscript
cmd/node/: ArrasNode.cc  ArrasNode.h  BanList.cc  BanList.h  CMakeLists.txt  ConfigurationClient.cc  ConfigurationClient.h  ConsulClient.cc  ConsulClient.h  HardwareFeatures.cc  HardwareFeatures.h  NodeError.h  NodeService.cc  NodeService.h  Options.h  PreemptionMonitor.cc  PreemptionMonitor.h  SConscript  ServiceClient.cc  ServiceClient.h  ServiceError.h  UrlRouter.cc  UrlRouter.h  main.cc
cmd/node/noderouter/: CMakeLists.txt  SConscript  main.cc  pthread_create_interposer.inc
cmd/node/router/: CMakeLists.txt  ClientRemoteEndpoint.cc  ClientRemoteEndpoint.h  ListenServer.cc  ListenServer.h  NodeRouter.cc  NodeRouter.h  NodeRouterManage.cc  NodeRouterManage.h  NodeRouterOptions.h  PeerManager.cc  PeerManager.h  RemoteEndpoint.cc  RemoteEndpoint.h  RouteMessage.cc  RouteMessage.h  RoutingTable.cc  RoutingTable.h  SConscript  SessionNodeMap.cc  SessionNodeMap.h  SessionRoutingData.cc  SessionRoutingData.h  ThreadedNodeRouter.cc  ThreadedNodeRouter.h  pthread_create_interposer.h
cmd/script/: SConscript  arras4.sh  consul_loader
cmd/test_harness/: README.md  cemu.py  coord.py  harness.sh  node.py  run.py  service.py  session.py  test.sd  test1.py  test2.sd  test3.py  test3.sd  update_test2.py
doc/: SConscript
lib/: CMakeLists.txt
lib/node/: CMakeLists.txt  router
lib/node/messages/: CMakeLists.txt  ClientConnectionStatusMessage.cc  ClientConnectionStatusMessage.h  ComputationStatusMessage.cc  ComputationStatusMessage.h  RouterInfoMessage.cc  RouterInfoMessage.h  SConscript  SessionRoutingDataMessage.cc  SessionRoutingDataMessage.h
lib/session/: ArrasController.cc  ArrasController.h  ArrasSessions.cc  ArrasSessions.h  CMakeLists.txt  Computation.cc  Computation.h  ComputationConfig.cc  ComputationConfig.h  ComputationDefaults.cc  ComputationDefaults.h  EventHandler.h  OperationError.h  SConscript  Session.cc  Session.h  SessionConfig.cc  SessionConfig.h  SessionError.h
mod/python/breakpad/: SConscript  breakpadProcess
scons/: top-level-SConscript
